tests/compile-fail/integration_suite__integration__general__encoding_error_in_arg.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: string encoding error
   ┌─ <input>:13:21
   │
13 │       textSet(0, 0, "⏄");  
   │                     ^^^ cannot be encoded using 'Shift_JIS'


